working on product show page WIP

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,16 +1,5 @@
 
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
+ /*
  *= require_tree .
  *= require_self
  *= require foundation_and_overrides
@@ -37,10 +26,19 @@ body {
   color: #373737;
 }
 
-h1, h1 a, h2, h3, h4 {
+
+
+h1, h1 a {
   font-family: 'Codystar', cursive;
   font-weight: bold;
   color: #C0B283
+}
+
+h2, h3 {
+  font-family: 'Sail', cursive;
+}
+h4, p {
+  font-family: helvetica, sans-serif;
 }
 
 a:hover {
@@ -222,6 +220,11 @@ div.title {
   margin-top: 10px;
 }
 
+.right {
+  float: right;
+}
+
+
 /*Cart Page*/
 .cart-items {
   margin: 10px 0;
@@ -235,4 +238,8 @@ div.title {
 
 th {
   text-align: left;
+}
+
+.price {
+  font-size: 2em;
 }
