added force ssl to production rb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Codystar" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sail" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=League+Script|Quattrocento+Sans|Satisfy" rel="stylesheet">
 
 
   <title>Debtsy</title>
