--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,7 +80,7 @@
   <footer>
     <div class="row">
       <p class="small-12 column">
-        Copyright 2017 Jolly Owl
+        &copy;2017 Jolly Owl
       </p>
     </div>
   </footer>
