add team names and credit page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -299,3 +299,17 @@ footer div {
 footer div p {
   padding-top: 20px;
 }
+
+.jolly-owl {
+  display: block;
+  text-align: center;
+}
+
+.credit {
+  font-size: 3em;
+  padding: 20px 0;
+}
+
+.names li {
+  padding: 5px 0;
+}
