--- a/app/views/orders/incomplete.html.erb
+++ b/app/views/orders/incomplete.html.erb
@@ -1,8 +1,16 @@
 <article class="fullfilment">
+  <div class="row title">
+    <h3 class="small-12 columns">
+      Order history
+    </h3>
+  </div>
+  <div class="small-12 medium-8 columns">
 
-  <%= render partial: "user" %>
+    <%= render partial: "user" %>
+  </div>
   <div class="row">
-    <div class="small-12 medium-6">
+    <div class="small-12 medium-4 columns">
+
       <h4>Incomplete orders</h4>
       <% if current_user.user_status_orders(false) == [] %>
       <p>
