--- a/app/views/orders/complete.html.erb
+++ b/app/views/orders/complete.html.erb
@@ -1,8 +1,16 @@
 <article class="fullfilment">
+  <div class="row ">
+    <h2 class="small-12 columns order-history-title">
+      Order history
+    </h2>
+  </div>
+  <div class="small-12 medium-8 columns">
 
-  <%= render partial: "user" %>
+    <%= render partial: "user" %>
+  </div>
   <div class="row">
-    <div class="small-12 medium-6">
+
+    <div class="small-12 medium-4 columns">
 
       <h4>Complete orders</h4>
       <% if current_user.user_status_orders(true) == [] %>
