--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
   <div class="row">
     <div class="small-12 medium-4 columns">
       <h4>My Products</h4>
-      <ul>
+      <ul class="my-products-list">
         <% @user.products.each do |product| %>
         <li>
           <%= link_to product.name, product_path(product.id) %>
@@ -27,25 +27,60 @@
       <%= button_to 'Manage My Sales Orders', user_orders_path(@user.id), method: :get, class: "button" %>
     </div>
     <div class="small-12 medium-4 columns">
+
       <h4>My Purchases</h4>
       <% if @purchases.empty? %>
       <p>
         No purchases yet.
       </p>
       <% else %>
-      <ul>
+      <table class="purchases-table">
+        <thead>
+          <tr>
+            <th>
+              Order #
+            </th>
+            <th>
+              Purchased
+            </th>
+            <th>
+              Items
+            </th>
+            <th>
+              Total
+            </th>
+          </tr>
+        </thead>
         <% @purchases.each do |purchase| %>
-        <li>
-          <%= link_to "Order ##{purchase.id}", order_path(purchase.id) %> purchased on
-          <%= purchase.created_at.strftime("%m/%d/%Y") %>: <%= purchase.products.length %> item(s) - <%= number_to_currency(purchase.total) %>
-        </li>
+        <tr>
+          <td>
+            <%= link_to "Order ##{purchase.id}", order_path(purchase.id) %>
+          </td>
+          <td>
+            <%= purchase.created_at.strftime("%m/%d/%Y") %>
+          </td>
+          <td>
+            <%= purchase.products.length %>
+          </td>
+          <td>
+            <%= number_to_currency(purchase.total) %>
+          </td>
+          <td>
+
+          </td>
+        </tr>
         <% end %>
-        <li>
-          Total spent: <%= number_to_currency(@user.user_purchases_total) %>
-        </li>
-      </ul>
+        <tr>
+          <td>
+            Total spent:
+          </td>
+          <td>
+            <strong><%= number_to_currency(@user.user_purchases_total) %></strong>
+          </td>
+        </tr>
+      </table>
       <% end %>
-    </div>
+      </div>
     <div class="small-12 medium-4 columns">
       <h4>User Profile</h4>
       <p>
