--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <%= csrf_meta_tags %>
 </head>
 
-<body>
+<body class="row">
   <header class="row">
     <div class="row" id="top-row">
       <div class="small-4 medium-5 columns">
@@ -82,6 +82,7 @@
       <p class="small-12 column">
         &copy;2017 <%= link_to "Jolly Owl", "/jolly_owl", method: :get %>
       </p>
+
     </div>
   </footer>
 </body>
