--- a/app/views/orders/complete.html.erb
+++ b/app/views/orders/complete.html.erb
@@ -1,14 +1,14 @@
 <article class="fullfilment">
-  <div class="row ">
-    <h2 class="small-12 columns order-history-title">
-      Order history
-    </h2>
-  </div>
-  <div class="small-12 medium-8 columns">
-
-    <%= render partial: "user" %>
+  <div class="row title">
+    <h3 class="small-12 columns">
+      Order History
+    </h3>
   </div>
   <div class="row">
+    <div class="small-12 medium-8 columns">
+
+      <%= render partial: "user" %>
+    </div>
 
     <div class="small-12 medium-4 columns">
 
@@ -51,5 +51,4 @@
       </ul>
       <% end %>
     </div>
-  </div>
-</article>
+  </article>
