--- a/app/views/orders/incomplete.html.erb
+++ b/app/views/orders/incomplete.html.erb
@@ -1,14 +1,15 @@
 <article class="fullfilment">
   <div class="row title">
     <h3 class="small-12 columns">
-      Order history
+      Order History
     </h3>
   </div>
-  <div class="small-12 medium-8 columns">
-
-    <%= render partial: "user" %>
-  </div>
   <div class="row">
+    <div class="small-12 medium-8 columns">
+
+      <%= render partial: "user" %>
+    </div>
+
     <div class="small-12 medium-4 columns">
 
       <h4>Incomplete orders</h4>
@@ -50,5 +51,4 @@
       </ul>
       <% end %>
     </div>
-  </div>
-</article>
+  </article>
