--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,20 +1,20 @@
-<article class="index">
-  <div class = "row title">
+<article class="index row">
+<div class = "row title">
     <h3 class="small-12 cloumns">
       <%= @category_name %>
     </h3>
   </div>
 
   <ul class="row">
-  <% @products.each do |product| %>
+    <% @products.each do |product| %>
     <li class="small-12 medium-6 large-4 columns grid-item">
       <div class="border">
         <%= link_to(product_path(product.id)) do %>
-          <%= truncate(product.name) %> <br />
-          <img src="<%= product.photo_url %>" alt="product photo", class="index_photo" >
-      <% end %>
+        <%= truncate(product.name) %> <br />
+        <img src="<%= product.photo_url %>" alt="product photo", class="index_photo" >
+        <% end %>
       </div>
     </li>
-  <% end %>
+    <% end %>
   </ul>
 </article>
