--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<article class="index">
+<article class="index row">
 
   <div class = "row title">
     <h3 class="small-12 cloumns">Shop by Merchant</h3>
