--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,4 @@
-<article class="index">
+<article class="index row">
   <div class="row hero">
     <h3 class="orbit small-12 medium-6 columns" id="slogan">
       Whatever your budget... We can break it.
