--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,14 +2,15 @@
 
   <div class="row title">
     <h3 class="small-12 columns">
-      Order history
+      Order History
     </h3>
   </div>
-  <div class="small-12 medium-8 columns">
-
-    <%= render partial: "user" %>
-  </div>
   <div class="row">
+    <div class="small-12 medium-8 columns">
+
+      <%= render partial: "user" %>
+    </div>
+
     <div class="small-12 medium-4 columns">
 
       <h4>All orders</h4>
@@ -51,5 +52,4 @@
       </ul>
       <% end %>
     </div>
-  </div>
-</article>
+  </article>
