--- a/app/views/users/jolly_owl.html.erb
+++ b/app/views/users/jolly_owl.html.erb
@@ -3,20 +3,14 @@
   <h1 class="credit columns small-12 medium-12">
     This was a team project by:
   </h1>
-  <ul class="names columns small-12 medium-12">
-    <li>
-    </li>
-    <li>
-      <h2><%= link_to "Jackie Watanabe", "http://github.com/jackiewatanabe" %></h2>
-    </li>
-    <li>
-      <h2><%= link_to "Lynn Trickey", "http://github.com/ltrickey" %></h2>
-    </li>
-    <li>
-      <h2><%= link_to "Aurora Anderson", "http://github.com/auroralemieux" %></h2>
-    </li>
-    <li>
-      <h2><%= link_to "Alison Zerbe", "http://github.com/AlisonZ" %></h2>
-    </li>
-  </ul>
+
+  <h2 class="names columns small-12 medium-12"><%= link_to "Jackie Watanabe", "http://github.com/jackiewatanabe" %></h2>
+
+  <h2 class="names columns small-12 medium-12"><%= link_to "Lynn Trickey", "http://github.com/ltrickey" %></h2>
+
+  <h2 class="names columns small-12 medium-12"><%= link_to "Aurora Anderson", "http://github.com/auroralemieux" %></h2>
+
+  <h2 class="names columns small-12 medium-12"><%= link_to "Alison Zerbe", "http://github.com/AlisonZ" %></h2>
+
+  <p class="school columns small-12 medium-12">(students in Cohort 7 at Ada Developers Academy)</p>
 </article>
