fixed margin issue with main page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,12 @@
 </head>
 
 <body class="row">
-  <header class="row">
+  <header>
     <div class="row" id="top-row">
-      <div class="small-4 medium-5 columns">
+      <div class="small-3 medium-5 columns">
         <h1 class="main-header"><%= link_to "Debtsy", root_path %></h1>
       </div>
-      <div class="cart small-4 medium-5 columns">
+      <div class="cart small-3 medium-5 columns">
         <%= link_to image_tag( "cart"), cart_path %>
         <%= total_items_in_cart %>
       </div>
@@ -69,7 +69,7 @@
       </nav>
     </div>
   </header>
-  <main class="content">
+  <main class="content row">
     <section class="flash">
       <% flash.each do |name, message| %>
       <p class="row status <%= name %>"><%= message %></p>
