--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -2,5 +2,8 @@
     <%= f.label :name, "Category name" %>
     <%= f.text_field :name %>
 
+    <%= f.label :photo, "Image URL" %>
+    <%= f.text_field :photo %>
+
     <%= f.submit class: "button" %>
 <% end %>
