connecting to google, but there is a 400 error

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,7 @@
         <% else %>
         <ul class="header-login">
           <li>
-            <%= button_to "Log in", '/auth/github', class: "button" %>
+            <%= button_to "Log in with github", '/auth/github', class: "button" %>
           </li>
         </ul>
         <% end %>
