Added required:true to form for editing and adding product

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -8,13 +8,13 @@
 
 <%= form_for @product, method: form_method do |f| %>
   <%= f.label :name, "Product name:" %>
-  <%= f.text_field :name %>
+  <%= f.text_field :name, required: true%>
 
   <%= f.label :price %>
-  <%= f.text_field :price %>
+  <%= f.text_field :price, required: true %>
 
   <%= f.label :stock, "Stock inventory:" %>
-  <%= f.text_field :stock %>
+  <%= f.text_field :stock, required: true %>
 
   <%= f.label :description %>
   <%= f.text_area :description, size: "60x12" %>
@@ -23,7 +23,7 @@
   <%= f.text_field :photo_url %>
 
   <%= f.label :selling_status, "Selling Status:" %>
-  <%= f.select :selling_status, [['Selling', true], ['Retired', false]] %>
+  <%= f.select :selling_status, [['Selling', true], ['Retired', false]], required: true%>
 
   <%= f.label "Categories:" %>
   <%= f.collection_select :category_ids, Category.order(:name), :id, :name, {},  {multiple: true} %>
