--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -23,7 +23,7 @@
     </div>
 
     <div class="small-12 medium-4 columns">
-      <ul>
+      <ul class="price-info">
         <li class="price"> <%= number_to_currency(@product.price) %> each</li>
         <li> <% if @product.out_of_stock %>Out of stock<% else %><%= @product.stock %> left in stock <% end %></li>
         <li>
@@ -32,52 +32,59 @@
         <li>
           <strong>Average rating: </strong><% if @product.average_rating == 0 %><p>
             not rated yet</p>
-          <% else %><%= @product.average_rating %><% end %>
-        </li>
-      </ul>
+            <% else %><%= @product.average_rating %><% end %>
+          </li>
+        </ul>
 
-      <% if !@product.out_of_stock %>
-      <%= form_for @item, url: new_order_item_path(@product.id), method: :post do |f| %>
+        <% if !@product.out_of_stock %>
+        <%= form_for @item, url: new_order_item_path(@product.id), method: :post do |f| %>
 
-      <%= f.label :quantity %>
-      <%= f.select :quantity, (0..@product.stock) %>
+        <%= f.label :quantity %>
+        <%= f.select :quantity, (0..@product.stock) %>
 
-      <%= f.submit "Add to Cart", class: "button" %>
+        <%= f.submit "Add to Cart", class: "button" %>
 
 
-      <% end %>
-      <% end %>
-
-    </div>
-    <div class="small-12 medium-4 columns left review-edit-button">
-      <% if can_edit? %>
-      <%= button_to "Edit this product", edit_product_path(@product.id), class: "button", method: :get %>
-      <% end %>
-      <% if can_review? %>
-      <%= button_to "Review this product", new_product_review_path(@product.id), class: "button", method: :get %>
-      <% end %>
-    </div>
-
-    <div class="small-12 medium-4 columns reviews">
-      <section class="review">
-        <h2>Reviews</h2>
-        <% @product.reviews.each do |review| %>
-        <h3><%= review.title %> <p class="right rating-number"><%= review.rating %></p><small class="review-date"> <%= review.updated_at.strftime("%m/%d/%Y") %></small></h3>
-        <section class="review-body" >
-          <p>
-            <%= review.review_text %>
-          </p>
-        </section>
         <% end %>
-      </section>
-    </div>
+        <% end %>
 
-    <div class"row">
-
-      <div class="small-12 columns product-description">
-        <p><%= @product.description %> </p>
       </div>
-    </div>
-  </div>
 
-</article>
+      <section>
+        <div class="small-12 medium-4 columns reviews">
+          <section class="review">
+            <h2>What other shoppers think:</h2>
+            <h4>Overall rating: <strong><% if @product.average_rating == 0 %><p>
+              not rated yet</p>
+              <% else %><%= @product.average_rating %><% end %>/5</strong></h4>
+              <% @product.reviews.each do |review| %>
+              <h3><%= review.title %> <p class="right rating-number"><%= review.rating %></p><small class="review-date"> <%= review.updated_at.strftime("%B %d, %Y") %></small></h3>
+              <section class="review-body" >
+                <p>
+                  "<%= review.review_text %>"
+                </p>
+              </section>
+              <% end %>
+            </section>
+
+          </div>
+
+          <div class="small-12 medium-4 columns left review-edit-button">
+            <% if can_edit? %>
+            <%= button_to "Edit this product", edit_product_path(@product.id), class: "button", method: :get %>
+            <% end %>
+            <% if can_review? %>
+            <%= button_to "Review this product", new_product_review_path(@product.id), class: "button", method: :get %>
+            <% end %>
+          </div>
+        </section>
+        <div class"row">
+
+          <div class="small-12 columns product-description">
+            <h3>Product Details:</h3>
+            <p><%= @product.description %> </p>
+          </div>
+        </div>
+      </div>
+
+    </article>
