--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,8 +1,8 @@
 <article class="order">
 
   <div class="row title">
-    <h3 class="small-12 cloumns">
-      SHOrder Details
+    <h3 class="small-12 columns">
+      Order Details
     </h3>
   </div>
 
