--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -8,13 +8,13 @@
 
 <%= form_for @review, url: product_reviews_path, method: form_method do |f| %>
     <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, required: true %>
 
     <%= f.label :rating %>
-    <%= f.select :rating, [1,2,3,4,5] %>
+    <%= f.select :rating, [1,2,3,4,5], required: true %>
 
     <%= f.label :review_text %>
-    <%= f.text_area :review_text %>
+    <%= f.text_area :review_text, required: true %>
 
     <%= f.submit action_name, class: "button" %>
 <% end %>
